--- a/src/main/resources/templates/goods/buy/buyMenu.html
+++ b/src/main/resources/templates/goods/buy/buyMenu.html
@@ -130,6 +130,7 @@
         <br/>
         <input type="submit" value="Add to basket"/>
     </form>
+    <div th:if="${error}" class="error" th:text="${error}"></div>
 </div>
 
 
