--- a/src/main/resources/templates/account/yourAccount.html
+++ b/src/main/resources/templates/account/yourAccount.html
@@ -6,7 +6,6 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
             margin: 20px;
         }
 
@@ -17,6 +16,10 @@
 
         label, a {
             font-weight: bold;
+            display: inline-block;
+            width: 150px; /* Adjust width as needed */
+            text-align: left;
+            margin-bottom: 5px;
         }
 
         a {
@@ -42,6 +45,15 @@
         button:hover {
             background-color: #0056b3;
         }
+        .user-info {
+            border: 2px solid #ccc; /* Increased border size */
+            border-radius: 10px;
+            padding: 20px 50px;
+            margin-bottom: 10px;
+            display: inline-block;
+            text-align: left;
+        }
+
         .top-buttons {
             position: absolute;
             top: 20px;
@@ -51,37 +63,36 @@
         .top-buttons button {
             margin-left: 10px;
         }
-
-
     </style>
 </head>
 <body>
 <h1>Info</h1>
 
-<div th:each="user : ${user}">
-    <label for="name">Your name:</label>
-    <a th:text="${user.getFullName()}" id="name"></a>
-    <br/>
+<div class="user-info">
+    <div th:each="user : ${user}">
+        <label for="name">Your name:</label>
+        <a th:text="${user.getFullName()}" id="name"></a>
+        <br/>
 
-    <label for="email">Your email:</label>
-    <a th:text="${user.getEmail()}" id="email"></a>
-    <br/>
+        <label for="email">Your email:</label>
+        <a th:text="${user.getEmail()}" id="email"></a>
+        <br/>
 
-    <label for="phone">Your phone num:</label>
-    <a th:text="${user.getPhone()}" id="phone"></a>
-    <br/>
-    <div>
-        <label>Rating:</label>
-        <a th:text="${averageRating}">rating</a>
+        <label for="phone">Your phone num:</label>
+        <a th:text="${user.getPhone()}" id="phone"></a>
+        <br/>
+        <div>
+            <label>Rating:</label>
+            <a th:text="${averageRating}"></a>
+        </div>
     </div>
 </div>
+
 <div class="top-buttons">
     <button onclick="accountSettings()">Account settings</button>
     <button onclick="yourGoods()">Your goods</button>
-
     <button onclick="history()">History of buying</button>
 </div>
-
 
 <script>
     function yourGoods() {
@@ -91,10 +102,10 @@
     function accountSettings() {
         window.location.href = 'https://localhost:1000/get/account/settings';
     }
+
     function history() {
         window.location.href = 'https://localhost:1000/get/history/order';
     }
-
 </script>
 </body>
 </html>
