--- a/src/main/resources/templates/account/changePassword/emailFormForChangePass.html
+++ b/src/main/resources/templates/account/changePassword/emailFormForChangePass.html
@@ -63,6 +63,7 @@
             color: brown;
         }
 
+
     </style>
 </head>
 <body>
@@ -76,13 +77,13 @@
     <br/>
     <br/>
     <input type="submit" value="Next"/>
+    <button onclick="back()">Back</button>
 </form>
-<br/>
-<!--<button onclick="back()">Back</button>-->
-<!--<script>-->
-<!--    function back() {-->
-<!--        window.location.href = 'https://localhost:1000/login';-->
-<!--    }-->
-<!--</script>-->
+
+<script>
+    function back() {
+        window.location.href = 'https://localhost:1000/';
+    }
+</script>
 </body>
 </html>
