--- a/src/main/resources/templates/goods/addGoods.html
+++ b/src/main/resources/templates/goods/addGoods.html
@@ -98,13 +98,16 @@
 
     <br/>
     <input type="submit" value="Add new goods!"/>
+    <button onclick="back()">Back</button>
 </form>
 <br/>
-<!--<button onclick="back()">Back</button>-->
-<!--<script>-->
-<!--    function back() {-->
-<!--        window.location.href = 'https://localhost:1000/goods';-->
-<!--    }-->
-<!--</script>-->
+<br/>
+
+
+<script>
+    function back() {
+        window.location.href = 'https://localhost:1000/get/account';
+    }
+</script>
 </body>
 </html>
