--- a/src/main/resources/templates/goods/buy/orderForm.html
+++ b/src/main/resources/templates/goods/buy/orderForm.html
@@ -126,6 +126,14 @@
     <br/>
     <input type="submit" value="Submit Order">
 </form>
+<br/>
+
+<button onclick="back()">Back</button>
+<script>
+    function back() {
+        window.location.href = 'https://localhost:1000/get/basket';
+    }
+</script>
 </body>
 </html>
 
