--- a/src/main/resources/templates/account/changePassword/changePassword.html
+++ b/src/main/resources/templates/account/changePassword/changePassword.html
@@ -48,6 +48,21 @@
         .error {
             color: brown;
         }
+
+        button {
+            font-size: 16px;
+            padding: 10px 20px;
+            margin: 10px;
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -72,7 +87,13 @@
     <div th:if="${error}" class="error" th:text="${error}"></div>
 
     <input type="submit" value="Change password"/>
+    <button onclick="back()">Back</button>
 
 </form>
+<script>
+    function back() {
+        window.location.href = 'https://localhost:1000/get/account';
+    }
+</script>
 </body>
 </html>
