--- a/src/main/resources/templates/goods/buy/payment.html
+++ b/src/main/resources/templates/goods/buy/payment.html
@@ -39,24 +39,31 @@
             box-sizing: border-box;
         }
 
-        button[type="submit"] {
-            width: 100%;
-            padding: 10px;
+        .button-container {
+            text-align: center; /* Center the buttons within the container */
+        }
+
+        button[type="submit"], button {
+            font-size: 16px;
+            padding: 10px 20px;
             background-color: #007bff;
             color: #fff;
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            font-size: 16px;
+            transition: background-color 0.3s;
+            margin-top: 10px;
+            display: inline-block; /* Make buttons appear in one line */
         }
 
-        button[type="submit"]:hover {
+        button[type="submit"]:hover, button:hover {
             background-color: #0056b3;
         }
 
         .error {
             color: #ff0000;
         }
+
     </style>
 </head>
 <body>
@@ -80,11 +87,23 @@
             <input type="text" id="cvv" name="cvv" pattern="\d{3}" required>
         </div>
 
-        <button type="submit">Pay</button>
+        <div class="button-container">
+            <button type="submit">Pay</button>
+            <button onclick="back()">Back</button>
+        </div>
 
         <div th:if="${error}" class="error" th:text="${error}"></div>
+
     </form>
 </div>
+<br/>
+
+
+<script>
+    function back() {
+        window.location.href = 'https://localhost:1000/get/order/menu';
+    }
+</script>
 
 </body>
 </html>
