--- a/src/main/resources/templates/account/findSeller/userInfo.html
+++ b/src/main/resources/templates/account/findSeller/userInfo.html
@@ -88,10 +88,22 @@
         .rating-form-container button:hover {
             background-color: #218838;
         }
+        .top-buttons {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+        }
+
+        .top-buttons button {
+            margin-left: 10px;
+        }
     </style>
 </head>
 <body>
 <h1>Seller info</h1>
+<div class="top-buttons">
+    <button onclick="back()">Back</button>
+</div>
 
 <div th:each="user : ${user}" class="info-container">
     <div>
@@ -129,6 +141,10 @@
 <h2>All goods</h2>
 
 <div th:each="goods : ${goods}" class="info-container">
+    <div th:block th:if="${goods.getPhotoOfGood() != null}">
+        <img th:src="'data:image/jpeg;base64,' + ${goods.getPhotoOfGood()}" alt="Photo" width="100" height="110">
+    </div>
+
     <div>
         <label>Goods:</label>
         <a th:text="${goods.getName()}">Goods</a>
@@ -150,11 +166,11 @@
     </div>
 </div>
 
-<button onclick="back()">Back</button>
+
 
 <script>
     function back() {
-        window.location.href = 'https://localhost:1000/main';
+        window.location.href = 'https://localhost:1000/goods';
     }
 </script>
 </body>
