--- a/src/main/resources/templates/account/yourAccount.html
+++ b/src/main/resources/templates/account/yourAccount.html
@@ -85,6 +85,8 @@
             <label>Rating:</label>
             <a th:text="${averageRating}"></a>
         </div>
+
+        <div th:if="${error}" class="error" th:text="${error}"></div>
     </div>
 </div>
 
