--- a/src/main/resources/templates/goods/goods.html
+++ b/src/main/resources/templates/goods/goods.html
@@ -126,6 +126,9 @@
         <input type="hidden" name="idGoods" th:value="${goods.idGood}" />
         <input type="submit" value="Buy" />
     </form>
+
+    <div th:if="${error}" class="error" th:text="${error}"></div>
+
 </div>
 
 <script>
