--- a/src/main/resources/templates/goods/buy/orderHistory.html
+++ b/src/main/resources/templates/goods/buy/orderHistory.html
@@ -74,7 +74,7 @@
         <div th:text="'Goods:'"></div>
         <br/>
         <ul>
-            <li th:each="good, index : ${order.service}" th:text="${index.index + 1 + '. ' + good.name}"></li>
+            <li th:each="name, index : ${order.nameOfGood}" th:text="${index.index + 1 + '. ' + name}"></li>
         </ul>
         <br/>
         <div th:text="'Total price: ' + ${order.price}"></div>
