--- a/src/main/resources/templates/account/findSeller/userInfo.html
+++ b/src/main/resources/templates/account/findSeller/userInfo.html
@@ -164,6 +164,7 @@
         <label>Data:</label>
         <a th:text="${goods.getLocalDate()}">Goods</a>
     </div>
+    <div th:if="${error}" class="error" th:text="${error}"></div>
 </div>
 
 
