--- a/src/main/resources/templates/goods/foundGoods.html
+++ b/src/main/resources/templates/goods/foundGoods.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Found goods</title>
+    <link rel="stylesheet" href="path/to/your/css/file.css"> <!-- Add the path to your CSS file here -->
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,17 +61,19 @@
 <body>
 <h1>Filter</h1>
 <form th:method="POST" th:action="@{/get/found/goods}" th:object="${filterForm}">
+
+
     <br/>
-    <label for="category">Enter category of goods: </label>
-    <input type="text" th:field="*{category}" id="category"/>
-    <br/>
-    <br/>
-    <label for="minPrice">Enter min price of goods: </label>
-    <input type="number" th:field="*{minPrice}" id="minPrice" value="0"/>
+    <label >Enter category of goods: </label>
+    <input type="text" th:field="*{category}" />
     <br/>
     <br/>
-    <label for="maxPrice">Enter max price of goods: </label>
-    <input value="349856412" type="number" th:field="*{maxPrice}" id="maxPrice" />
+    <label>Enter min price of goods: </label>
+    <input type="number" th:field="*{minPrice}" />
+    <br/>
+    <br/>
+    <label>Enter max price of goods: </label>
+    <input type="number" th:field="*{maxPrice}"/>
     <br/>
     <br/>
     <input type="submit" value="Find goods"/>
