--- a/src/main/resources/templates/account/changePassword/changePassword.html
+++ b/src/main/resources/templates/account/changePassword/changePassword.html
@@ -67,7 +67,7 @@
 </head>
 <body>
 <h1>Change password</h1>
-<form th:method="POST" th:action="@{/change/password}" th:object="${changePass}">
+<form th:method="POST" th:action="@{/change/password}" th:object="${changePassDto}">
 
     <input type="hidden" name="email" th:value="${email}"/>
     <div style="color: brown" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Error</div>
