--- a/src/main/resources/templates/account/settings/settings.html
+++ b/src/main/resources/templates/account/settings/settings.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 <h1>Settings</h1>
-<button onclick="changePass()">Change Password</button>
+<button onclick="changePassDto()">Change Password</button>
 
 <div class="top-buttons">
     <button onclick="back()">Back</button>
@@ -53,8 +53,8 @@
     }
 </script>
 <script>
-    function changePass(){
-        window.location.href = 'https://localhost:1000/send/code/without/emailForm';
+    function changePassDto(){
+        window.location.href = 'https://localhost:1000/send/code/without/emailDto';
     }
 </script>
 </body>
