--- a/src/main/resources/templates/goods/foundGoods.html
+++ b/src/main/resources/templates/goods/foundGoods.html
@@ -60,7 +60,7 @@
 </head>
 <body>
 <h1>Filter</h1>
-<form th:method="POST" th:action="@{/get/found/goods}" th:object="${filterForm}">
+<form th:method="POST" th:action="@{/get/found/goods}" th:object="${filterDto}">
 
 
     <br/>
