--- a/src/main/resources/templates/account/findSeller/emailFormForFindUser.html
+++ b/src/main/resources/templates/account/findSeller/emailFormForFindUser.html
@@ -78,9 +78,9 @@
 
 <h1>Web Marketplace</h1>
 
-<form th:method="POST" th:action="@{/find/user}" th:object="${emailForm}">
+<form th:method="POST" th:action="@{/find/user}" th:object="${emailDto}">
 <!--    <br/>-->
-<!--    <div th:block th:if="${emailForm.getEmail() == null}">-->
+<!--    <div th:block th:if="${emailDto.getEmail() == null}">-->
         <label for="email">Enter email of seller:</label>
         <input type="text" th:field="*{email}" id="email"/>
         <div style="color: brown" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Error</div>
